[package]
name = "cpen431"
version = "0.1.0"
edition = "2021"

[build-dependencies]
protobuf-codegen = "3.7.1"
protoc-bin-vendored = "3.1.0"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
crc32fast = "1.4.2"
hex = "0.4.3"
local-ip-address = "0.6.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
protobuf = "3.7.1"
rand = "0.8.5"
tokio = { version = "1.43.0", features = ["full", "net"] }
