# cargo-features = ["codegen-backend"]

[package]
name = "cpen431"
version = "0.1.0"
edition = "2021"

[build-dependencies]
protobuf-codegen = "3.7.1"
protoc-bin-vendored = "3.1.0"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
crc32fast = "1.4.2"
get-size = { version = "0.1.4", features = ["derive"] }
hashlink = "0.10.0"
hex = "0.4.3"
local-ip-address = "0.6.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
portpicker = "0.1.1"
protobuf = "3.7.1"
rand = "0.8.5"
tempfile = "3.15.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full", "net"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"

# [profile.dev]
# codegen-backend = "cranelift"

[profile.release]
# debug = true
